# radiojournal

./: .env.dev  .pre-commit-config.yaml  .tflint.hcl  Cargo.toml  README.md  docker-compose.yml  renovate.json  run.sh
.github/workflows/: auto-update-user-agent.yml  build-frontend.yml  build-lambda.yml  build-lambdas.yml  bump-version.yml  coverage.yml  deploy.yml  lint-test.yml  lint.yml  test.yml
api/: Cargo.toml
api/src/: errors.rs  extractors.rs  main.rs  models.rs
api/src/models/: v1.rs
api/src/routes/: mod.rs  play.rs  station.rs  track.rs
api/src/routes/v1/: mod.rs  play.rs  station.rs  track.rs
cli/: Cargo.toml
cli/src/: main.rs  mock.rs
frontend/: README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/src/: app.css  app.scss
frontend/src/lib/: api.ts  dayjs.ts  helpers.ts
frontend/src/lib/components/: TracksTable.svelte
frontend/src/lib/components/modals/: TrackModal.svelte
frontend/src/lib/data/: windowsZones.json
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
frontend/src/routes/station/[station_id]/: +page.svelte  +page.ts
frontend/src/routes/station/[station_id]/artist/[artist_name]/: +page.svelte  +page.ts
frontend/src/routes/station/[station_id]/plays/: +page.ts
frontend/src/routes/station/[station_id]/plays/[hour_id]/: +page.svelte  +page.ts
frontend/src/routes/station/[station_id]/track/[track_id]/: +page.svelte  +page.ts
frontend/src/routes/station/[station_id]/tracks/: +page.svelte  +page.ts
lib/: Cargo.toml
lib/src/: helpers.rs  init.rs  lib.rs  models.rs
lib/src/crud/: mod.rs  play.rs  station.rs  track.rs
lib/src/crud/logger/: mod.rs  models.rs  provider.rs
lib/src/crud/play/: mod.rs  models.rs  provider.rs
lib/src/crud/shared/: models.rs
lib/src/crud/station/: mod.rs  models.rs  provider.rs
lib/src/crud/track/: mod.rs  models.rs  provider.rs
lib/src/mock/: table.rs
lib/src/models/: id.rs  mod.rs  play.rs  station.rs  track.rs
logger/: Cargo.toml
logger/src/: main.rs
logger/src/fetchers/: atime.rs  coolism.rs  iheart.rs  mod.rs
scripts/: bump_version.sh  gen_timezones.py  init_localstack.py  pyproject.toml
scripts/migrations/: 01_insert_track_play_count.py  02_insert_track_metadata.py  03_clear_tracks_gsi1.py  04_init_track_play_count.py  05_gsi1_reuse_sk.py  06_gsi1pk_month_partition.py
terraform/api/: cloudwatch.tf  config.tf  iam.tf  lambda.tf  main.tf  variables.tf
terraform/code_deployment_role/: config.tf  main.tf  policies.tf  variables.tf
terraform/data_store/: config.tf  dynamodb.tf  outputs.tf
terraform/logger/: cloudwatch.tf  config.tf  eventbridge.tf  iam.tf  lambda.tf  variables.tf
