[package]
name = "radiojournal-api"
version = "0.4.5"
edition = "2024"

[dependencies]
radiojournal = { path = "../lib" }
axum = { version = "=0.8.4", features = ["macros"] }
chrono = { version = "=0.4.41", features = ["serde"] }
lambda_http = "=0.15.2"
serde = { version = "=1.0.219", features = ["derive"] }
tokio = { version = "=1.47.0", features = ["full"] }
tower-http = { version = "=0.6.6", features = ["compression-full", "trace"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["json"] }
ulid = { version = "=1.2.1", features = ["serde"] }
utoipa = { version = "=5.4.0", features = ["ulid", "chrono", "axum_extras"] }
utoipa-swagger-ui = { version = "=9.0.2", features = ["axum"] }
utoipauto = "=0.2.0"
