[package]
name = "radiojournal-api"
version = "0.5.1"
edition = "2024"

[dependencies]
radiojournal = { path = "../lib" }
axum = { version = "=0.8.8", features = ["macros"] }
chrono = { version = "=0.4.42", features = ["serde"] }
lambda_http = "=1.0.1"
serde = { version = "=1.0.228", features = ["derive"] }
tokio = { version = "=1.48.0", features = ["full"] }
tower-http = { version = "=0.6.8", features = ["compression-full", "trace"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["json"] }
ulid = { version = "=1.2.1", features = ["serde"] }
utoipa = { version = "=5.4.0", features = ["ulid", "chrono", "axum_extras"] }
utoipa-swagger-ui = { version = "=9.0.2", features = ["axum"] }
utoipauto = "=0.2.0"
