[package]
name = "radiojournal-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
radiojournal = { path = "../lib", features = ["local"] }
aws-config = "=1.3.0"
aws-sdk-dynamodb = "=1.25.0"
tokio = { version = "=1.37.0", features = ["full"] }
tracing-subscriber = "=0.3.18"
anyhow = "=1.0.83"
tracing = "=0.1.40"
