[package]
name = "radiojournal"
version = "0.5.3"
edition = "2024"

[features]
local = []

[dependencies]
anyhow = "=1.0.102"
aws-config = "=1.8.15"
aws-sdk-dynamodb = "=1.110.0"
aws-smithy-runtime-api = "=1.11.6"
chrono = { version = "=0.4.44", features = ["serde"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_dynamo = { version = "=4.3.0", features = ["aws-sdk-dynamodb+1"] }
thiserror = "=2.0.18"
tracing = "=0.1.44"
ulid = { version = "=1.2.1", features = ["serde"] }
utoipa = "=5.4.0"

[dev-dependencies]
rstest = "=0.26.1"
