[package]
name = "radiojournal"
version = "0.6.7"
edition = "2024"

[features]
local = []

[dependencies]
anyhow = "=1.0.104"
aws-config = "=1.9.0"
aws-sdk-dynamodb = "=1.117.0"
aws-smithy-runtime-api = "=1.13.0"
chrono = { version = "=0.4.45", features = ["serde"] }
serde = { version = "=1.0.229", features = ["derive"] }
serde_dynamo = { version = "=4.3.0", features = ["aws-sdk-dynamodb+1"] }
thiserror = "=2.0.19"
tracing = "=0.1.44"
ulid = { version = "=1.2.1", features = ["serde"] }
utoipa = "=5.5.0"

[dev-dependencies]
rstest = "=0.26.1"
