[package]
name = "radiojournal"
version = "0.6.8"
edition = "2024"

[features]
local = []

[dependencies]
anyhow = "=1.0.104"
aws-config = "=1.10.1"
aws-sdk-dynamodb = "=1.119.0"
aws-smithy-runtime-api = "=1.14.0"
chrono = { version = "=0.4.45", features = ["serde"] }
serde = { version = "=1.0.229", features = ["derive"] }
serde_dynamo = { version = "=4.3.0", features = ["aws-sdk-dynamodb+1"] }
thiserror = "=2.0.19"
tracing = "=0.1.44"
ulid = { version = "=3.0.0", features = ["serde"] }
utoipa = "=5.5.0"

[dev-dependencies]
rstest = "=0.26.1"
