[package]
name = "radiojournal-logger"
version = "0.5.1"
edition = "2024"

[dependencies]
radiojournal = { path = "../lib" }
anyhow = "=1.0.100"
async-trait = "=0.1.89"
chrono = { version = "=0.4.42", features = ["serde"] }
lambda_runtime = "=1.0.2"
moka = { version = "=0.12.12", features = ["future"] }
reqwest = { version = "=0.13.1", features = ["json", "query"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.148"
tokio = { version = "=1.49.0", features = ["full"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["json"] }
