[package]
name = "radiojournal-logger"
version = "0.6.7"
edition = "2024"

[dependencies]
radiojournal = { path = "../lib" }
anyhow = "=1.0.103"
async-trait = "=0.1.89"
chrono = { version = "=0.4.45", features = ["serde"] }
lambda_runtime = "=1.3.0"
moka = { version = "=0.12.15", features = ["future"] }
reqwest = { version = "=0.13.4", features = ["json", "query"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
tokio = { version = "=1.52.3", features = ["full"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["json"] }
