[tool.poetry]
name = "radiojournal-scripts"
version = "0.4.3"
description = "Scripts for radiojournal"
authors = ["Thitat Auareesuksakul <flux@thitat.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
